12_K8s_ConfigMaps_Secrets_Ingress_Troubleshooting/manifests/03-ingress/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campus-web
  namespace: session12
  labels:
    app: campus-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: campus-web
  template:
    metadata:
      labels:
        app: campus-web
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: campus-web-html
---
apiVersion: v1
kind: Service
metadata:
  name: campus-web
  namespace: session12
spec:
  type: ClusterIP
  selector:
    app: campus-web
  ports:
    - port: 80
      targetPort: 80
